--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -39,7 +39,7 @@ spec:
 
       initContainers:
         - name: busybox
-          image: busybox:laest
+          image: busybox:latest
           args: ["rm", "-rf", "/var/lib/mysql/lost+found"]
           volumeMounts:
             - name: vpro-db-data
